--- a/templates/form.html
+++ b/templates/form.html
@@ -1,10 +1,18 @@
-<!doctype html>
-<title>Response Form</title>
-<h1>Submit Your Info</h1>
-<form method="POST">
-  {{ form.hidden_tag() }}
-  <p>{{ form.name.label }}<br>{{ form.name(size=32) }}</p>
-  <p>{{ form.email.label }}<br>{{ form.email(size=32) }}</p>
-  <p>{{ form.comments.label }}<br>{{ form.comments(size=64) }}</p>
-  <p>{{ form.submit() }}</p>
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Simple Form</title>
+</head>
+<body>
+    <h2>Submit Your Info</h2>
+    <form method="POST">
+        <label>Name:</label><br>
+        <input type="text" name="name" required><br>
+        <label>Email:</label><br>
+        <input type="email" name="email" required><br>
+        <label>Comment:</label><br>
+        <textarea name="comment"></textarea><br><br>
+        <input type="submit" value="Submit">
+    </form>
+</body>
+</html>
